force-app/main/default-backup/objects/Account/fields/Agr_AdhesionVersion__c.field-meta.xml
<CustomField>
    <fullName>Agr_AdhesionVersion__c</fullName>
    <label>Versão de Adesão</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Simplificada</fullName>
            </value>
            <value>
                <fullName>Facilitada</fullName>
            </value>
            <value>
                <fullName>Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>