force-app/main/default-backup/objects/Account/fields/Agr_BradescoSegment__c.field-meta.xml
<CustomField>
    <fullName>Agr_BradescoSegment__c</fullName>
    <label>Segmento do cliente no Bradesco</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BACENJUD</fullName>
            </value>
            <value>
                <fullName>CENTRALIZADO</fullName>
            </value>
            <value>
                <fullName>CORPORATE</fullName>
            </value>
            <value>
                <fullName>CORPORATE ONE</fullName>
            </value>
            <value>
                <fullName>EMPRESAS</fullName>
            </value>
            <value>
                <fullName>LARGE CORPORATE</fullName>
            </value>
            <value>
                <fullName>MATRIZ</fullName>
            </value>
            <value>
                <fullName>MULTIS INSTITUCIONAL</fullName>
            </value>
            <value>
                <fullName>NAO_SEGMENTADO</fullName>
            </value>
            <value>
                <fullName>NÃO CORRENTISTA</fullName>
            </value>
            <value>
                <fullName>NEXT</fullName>
            </value>
            <value>
                <fullName>PRIME</fullName>
            </value>
            <value>
                <fullName>PRIME DIGITAL</fullName>
            </value>
            <value>
                <fullName>PRIME INVEST</fullName>
            </value>
            <value>
                <fullName>PRIME INVEST DIGITAL</fullName>
            </value>
            <value>
                <fullName>PRIME INVEST PIC</fullName>
            </value>
            <value>
                <fullName>PRIME PIC</fullName>
            </value>
            <value>
                <fullName>PRIME TOP TIER (PIC)</fullName>
            </value>
            <value>
                <fullName>PRIVATE</fullName>
            </value>
            <value>
                <fullName>TOP TIER</fullName>
            </value>
            <value>
                <fullName>TOP TIER REDE</fullName>
            </value>
            <value>
                <fullName>VJ_ALTO_VALOR</fullName>
            </value>
            <value>
                <fullName>VJ_CLASSIC</fullName>
            </value>
            <value>
                <fullName>VJ_DIGITAL</fullName>
            </value>
            <value>
                <fullName>VJ_EXCLUSIVE</fullName>
            </value>
            <value>
                <fullName>VJ_PJ</fullName>
            </value>
            <value>
                <fullName>VJ_SUPERCLASSIC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>