force-app/main/default-backup/objects/Account/fields/Agr_CBLCActive__c.field-meta.xml
<CustomField>
    <fullName>Agr_CBLCActive__c</fullName>
    <label>CBLC</label>
    <length>80</length>
    <type>Text</type>
</CustomField>