force-app/main/default-backup/objects/Account/fields/Agr_ComercialPhone__c.field-meta.xml
<CustomField>
    <fullName>Agr_ComercialPhone__c</fullName>
    <label>Telefone</label>
    <type>Phone</type>
</CustomField>