force-app/main/default-backup/objects/Account/fields/Agr_ConstitutionForm__c.field-meta.xml
<CustomField>
    <fullName>Agr_ConstitutionForm__c</fullName>
    <label>Forma de Constituição</label>
    <length>60</length>
    <type>Text</type>
</CustomField>