force-app/main/default-backup/objects/Account/fields/Agr_CPF_CNPJ__c.field-meta.xml
<CustomField>
    <fullName>Agr_CPF_CNPJ__c</fullName>
    <label>CPF/CNPJ</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>