force-app/main/default-backup/objects/Account/fields/Agr_DocumentationStatus__c.field-meta.xml
<CustomField>
    <fullName>Agr_DocumentationStatus__c</fullName>
    <label>Status Rocket</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>B3 APROVADO</fullName>
            </value>
            <value>
                <fullName>B3 REPROVADO</fullName>
            </value>
            <value>
                <fullName>REST APROVADO</fullName>
            </value>
            <value>
                <fullName>REST REPROVADO</fullName>
            </value>
            <value>
                <fullName>ROCKET APROVADO</fullName>
            </value>
            <value>
                <fullName>ROCKET VALIDACAO</fullName>
            </value>
            <value>
                <fullName>ROCKET REPROVADO</fullName>
            </value>
            <value>
                <fullName>PENDENTE DOCTO</fullName>
            </value>
            <value>
                <fullName>DOCUMENTACAO ANALISE</fullName>
            </value>
            <value>
                <fullName>APROVACAO MANUAL</fullName>
            </value>
            <value>
                <fullName>MESA 2</fullName>
            </value>
            <value>
                <fullName>MESA 4</fullName>
            </value>
            <value>
                <fullName>MESA 6 - BLACKLIST</fullName>
            </value>
            <value>
                <fullName>REST APROVADO MANUAL</fullName>
            </value>
            <value>
                <fullName>CADASTRANDO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>