force-app/main/default-backup/objects/Account/fields/Agr_LegalNature__c.field-meta.xml
<CustomField>
    <fullName>Agr_LegalNature__c</fullName>
    <label>Natureza jurídica</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>101 - PESSOA FÍSICA</fullName>
            </value>
            <value>
                <fullName>201 - EMPRESA PÚBLICA</fullName>
            </value>
            <value>
                <fullName>202 - SOCIEDADES DE ECONOMIA MISTA, ANÔNIMA (S/A), LTDA, POR COTAS E OUTRAS</fullName>
            </value>
            <value>
                <fullName>203 - FUNDO DE INVESTIMENTO IMOBILIÁRIO</fullName>
            </value>
            <value>
                <fullName>204 - BOLSA DE VALORES E MERCADORIAS</fullName>
            </value>
            <value>
                <fullName>205 - CONDOMÍNIO</fullName>
            </value>
            <value>
                <fullName>206 - COOPERATIVA</fullName>
            </value>
            <value>
                <fullName>207 - CONSÓRCIO</fullName>
            </value>
            <value>
                <fullName>301 - INSTITUIÇÃO DE CARÁTER FILANTRÓPICO, RECREATIVO, CULTURAL OU CIENTÍFICO, ASSOCIAÇÃO CIVIL QUE PRESTE OS SERVIÇOS PARA OS QUAIS HOUVER SIDO INSTITUÍDA E OS COLOQUEM À DISPOSIÇÃO DO GRUPO DE PESSOAS A QUE SE DESTINA, SEM FINS LUCRATIVOS</fullName>
            </value>
            <value>
                <fullName>401 - BANCO COMERCIAL / MÚLTIPLO</fullName>
            </value>
            <value>
                <fullName>402 - BANCO DE INVESTIMENTO</fullName>
            </value>
            <value>
                <fullName>403 - SOCIEDADE DE SEGURO, PREVIDÊNCIA E CAPITALIZAÇÃO</fullName>
            </value>
            <value>
                <fullName>404 - SOCIEDADE DISTRIBUIDORA DE TÍTULOS E VALORES MOBILIÁRIOS</fullName>
            </value>
            <value>
                <fullName>405 - SOCIEDADE CORRETORA DE TÍTULOS, VALORES MOBILIÁRIOS E CÂMBIO</fullName>
            </value>
            <value>
                <fullName>406 - SOCIEDADE FINANCEIRA E DE CRÉDITO IMOBILIÁRIO</fullName>
            </value>
            <value>
                <fullName>407 - SOCIEDADE DE ARRENDAMENTO MERCANTIL (LEASING)</fullName>
            </value>
            <value>
                <fullName>501 - FUNDO DE INVESTIMENTO (EXCETO FUNDO DE INVESTIMENTO IMOBILIÁRIO, QUE É TRIBUTADO COMO QUALQUER PESSOA JURÍDICA)</fullName>
            </value>
            <value>
                <fullName>601 - FUNDO DE PREVIDÊNCIA PRIVADA (INCLUSIVE FAPI) - ABERTO</fullName>
            </value>
            <value>
                <fullName>602 - FUNDO DE PREVIDÊNCIA PRIVADA (INCLUSIVE FAPI) - FECHADO</fullName>
            </value>
            <value>
                <fullName>603 - FUNDO DE PLANO DE BENEFÍCIO DE SOCIEDADE SEGURADORA (INCLUSIVE SEGURO DE VIDA)</fullName>
            </value>
            <value>
                <fullName>701 - CLUBE DE INVESTIMENTO</fullName>
            </value>
            <value>
                <fullName>801 - UNIÃO, ESTADO, MUNICÍPIO OU DISTRITO FEDERAL, AUTARQUIA OU FUNDAÇÃO INSTITUÍDA E MANTIDA PELO PODER PÚBLICO</fullName>
            </value>
            <value>
                <fullName>901 - TEMPLO DE QUALQUER CULTO</fullName>
            </value>
            <value>
                <fullName>902 - PARTIDO POLÍTICO E SUAS FUNDAÇÕES</fullName>
            </value>
            <value>
                <fullName>903 - ENTIDADE SINDICAL DOS TRABALHADORES</fullName>
            </value>
            <value>
                <fullName>904 - INSTITUIÇÃO DE EDUCAÇÃO E ASSISTÊNCIA SOCIAL, SEM FINS LUCRATIVOS, ATENDIDOS OS REQUISITOS DA LEI</fullName>
            </value>
            <value>
                <fullName>1001 - INVESTIDOR NÃO-RESIDENTE RESOLUÇÃO Nº 2.689 - PESSOA FÍSICA</fullName>
            </value>
            <value>
                <fullName>1002 - INVESTIDOR NÃO-RESIDENTE RESOLUÇÃO Nº 2.689 - PESSOA JURÍDICA</fullName>
            </value>
            <value>
                <fullName>1301 - INVESTIDOR NÃO-RESIDENTE OUTROS - PESSOA FÍSICA</fullName>
            </value>
            <value>
                <fullName>1302 - INVESTIDOR NÃO-RESIDENTE OUTROS - PESSOA JURÍDICA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>