force-app/main/default-backup/objects/Account/fields/Agr_MainActivity__c.field-meta.xml
<CustomField>
    <fullName>Agr_MainActivity__c</fullName>
    <label>Principal Atividade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADMINISTRADOR</fullName>
            </value>
            <value>
                <fullName>ADVOGADO</fullName>
            </value>
            <value>
                <fullName>AGENCIADOR DE PROPAGANDA</fullName>
            </value>
            <value>
                <fullName>AGENTE ADMINISTRATIVO</fullName>
            </value>
            <value>
                <fullName>AGENTE DE SERVICOS FUNERARIOS E EMBALSAMADOR</fullName>
            </value>
            <value>
                <fullName>AGENTE DE VIAGEM E GUIA DE TURISMO</fullName>
            </value>
            <value>
                <fullName>AGRONOMO</fullName>
            </value>
            <value>
                <fullName>AGROPECUARISTA</fullName>
            </value>
            <value>
                <fullName>ALFAIATE</fullName>
            </value>
            <value>
                <fullName>ANALISTA DE SISTEMAS</fullName>
            </value>
            <value>
                <fullName>APOSENTADO (EXCETO FUNCIONARIO PUBLICO)</fullName>
            </value>
            <value>
                <fullName>ARQUITETO</fullName>
            </value>
            <value>
                <fullName>ASSISTENTE SOCIAL</fullName>
            </value>
            <value>
                <fullName>ASTRONOMO E METEOROLOGISTA</fullName>
            </value>
            <value>
                <fullName>ATIVIDADES NAO ESPECIFICADAS/CLASSIFICADAS</fullName>
            </value>
            <value>
                <fullName>ATLETA PROFISSIONAL E TECNICO EM DESPORTOS</fullName>
            </value>
            <value>
                <fullName>ATOR E DIRETOR DE ESPETACULOS PUBLICOS</fullName>
            </value>
            <value>
                <fullName>ATUARIO E MATEMATICO</fullName>
            </value>
            <value>
                <fullName>AUXILIAR DE ESCRITORIO E ASSEMELHADOS</fullName>
            </value>
            <value>
                <fullName>AUXILIAR DE LABORATORIO</fullName>
            </value>
            <value>
                <fullName>BANCARIO E ECONOMIARIO</fullName>
            </value>
            <value>
                <fullName>BANCOS, ASSOCIAÇÕES CUSTODIANTES E INSTITUIÇÕES.</fullName>
            </value>
            <value>
                <fullName>BIBLIOTECARIO, ARQUIVISTA, MUSEOLOGO E ARQUEOLOGO</fullName>
            </value>
            <value>
                <fullName>BIOLOGO E BIOMEDICO</fullName>
            </value>
            <value>
                <fullName>BOLSISTA, ESTAGIARIO E ASSEMELHADOS</fullName>
            </value>
            <value>
                <fullName>BOMBEIRO E INSTALADOR DE GAS, AGUA, ESGOTO E ASSEMELHADOS</fullName>
            </value>
            <value>
                <fullName>CABELEREIRO, BARBEIRO, MANICURE, PEDICURE, MAQUILADOR</fullName>
            </value>
            <value>
                <fullName>CANTOR E COMPOSITOR</fullName>
            </value>
            <value>
                <fullName>CAPITALISTA RECEBENDO RENDIMENTO DE APLICACAO DE CAPITAL</fullName>
            </value>
            <value>
                <fullName>CHEFE INTERMEDIARIO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>