force-app/main/default-backup/objects/Account/fields/Agr_NextReview__c.field-meta.xml
<CustomField>
    <fullName>Agr_NextReview__c</fullName>
    <formula>FinServ__LastReview__c + 720</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data de vencimento do cadastro</label>
    <type>Date</type>
</CustomField>