force-app/main/default-backup/objects/Account/fields/Agr_OwnerInvestmentPortolio__c.field-meta.xml
<CustomField>
    <fullName>Agr_OwnerInvestmentPortolio__c</fullName>
    <label>Opero Carteira</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Própria</fullName>
            </value>
            <value>
                <fullName>Terceiro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>