force-app/main/default-backup/objects/Account/fields/Agr_ResidentialComplement__c.field-meta.xml
<CustomField>
    <fullName>Agr_ResidentialComplement__c</fullName>
    <label>Complemento</label>
    <length>80</length>
    <type>Text</type>
</CustomField>