force-app/main/default-backup/objects/Account/fields/Agr_ResidentialCountry__c.field-meta.xml
<CustomField>
    <fullName>Agr_ResidentialCountry__c</fullName>
    <label>País</label>
    <length>80</length>
    <type>Text</type>
</CustomField>