force-app/main/default-backup/objects/Account/fields/Agr_ResidentialMobile1__c.field-meta.xml
<CustomField>
    <fullName>Agr_ResidentialMobile1__c</fullName>
    <label>Celular 1</label>
    <type>Phone</type>
</CustomField>