force-app/main/default-backup/objects/Account/fields/Agr_ResidentialMobile2__c.field-meta.xml
<CustomField>
    <fullName>Agr_ResidentialMobile2__c</fullName>
    <label>Celular 2</label>
    <type>Phone</type>
</CustomField>