force-app/main/default-backup/objects/Account/fields/Agr_ResidentialState__c.field-meta.xml
<CustomField>
    <fullName>Agr_ResidentialState__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AC - ACRE</fullName>
            </value>
            <value>
                <fullName>AL - ALAGOAS</fullName>
            </value>
            <value>
                <fullName>AM - AMAZONAS</fullName>
            </value>
            <value>
                <fullName>AP - AMAPA</fullName>
            </value>
            <value>
                <fullName>BA - BAHIA</fullName>
            </value>
            <value>
                <fullName>CE - CEARA</fullName>
            </value>
            <value>
                <fullName>DF - DISTRITO FEDERAL</fullName>
            </value>
            <value>
                <fullName>ES - ESPIRITO SANTO</fullName>
            </value>
            <value>
                <fullName>GO - GOIAS</fullName>
            </value>
            <value>
                <fullName>MA - MARANHAO</fullName>
            </value>
            <value>
                <fullName>MG - MINAS GERAIS</fullName>
            </value>
            <value>
                <fullName>MS - MATO GROSSO DO SUL</fullName>
            </value>
            <value>
                <fullName>MT - MATO GROSSO</fullName>
            </value>
            <value>
                <fullName>PA - PARA</fullName>
            </value>
            <value>
                <fullName>PB - PARAIBA</fullName>
            </value>
            <value>
                <fullName>PE - PERNAMBUCO</fullName>
            </value>
            <value>
                <fullName>PI - PIAUI</fullName>
            </value>
            <value>
                <fullName>PR - PARANA</fullName>
            </value>
            <value>
                <fullName>RJ - RIO DE JANEIRO</fullName>
            </value>
            <value>
                <fullName>RN - RIO GRANDE DO NORTE</fullName>
            </value>
            <value>
                <fullName>RO - RONDONIA</fullName>
            </value>
            <value>
                <fullName>RR - RORAIMA</fullName>
            </value>
            <value>
                <fullName>RS - RIO GRANDE DO SUL</fullName>
            </value>
            <value>
                <fullName>SC - SANTA CATARINA</fullName>
            </value>
            <value>
                <fullName>SE - SERGIPE</fullName>
            </value>
            <value>
                <fullName>SP - SAO PAULO</fullName>
            </value>
            <value>
                <fullName>TO - TOCANTINS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>