force-app/main/default-backup/objects/Account/fields/Agr_ResidentialStreet__c.field-meta.xml
<CustomField>
    <fullName>Agr_ResidentialStreet__c</fullName>
    <label>Logradouro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>