force-app/main/default-backup/objects/Account/fields/Agr_SalesTrader__c.field-meta.xml
<CustomField>
    <fullName>Agr_SalesTrader__c</fullName>
    <label>Sales Trader</label>
    <length>255</length>
    <type>Text</type>
</CustomField>