force-app/main/default-backup/objects/Account/fields/FinServ__TotalClaimAmountPaid__c.field-meta.xml
<CustomField>
    <fullName>FinServ__TotalClaimAmountPaid__c</fullName>
    <description>Total amount paid for all the claims that were ever raised for the policies currently owned by the policyholder&apos;s primary household.</description>
    <inlineHelpText>Isso engloba o valor pago por todas as reivindicações (independentemente do status atual), incluindo as efetuadas, contanto que a apólice relacionada esteja ativa.</inlineHelpText>
    <label>Total Claim Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>