force-app/main/default-backup/objects/Account/recordTypes/FinServ__IndustriesIndividual.recordType-meta.xml
<RecordType>
    <fullName>FinServ__IndustriesIndividual</fullName>
    <active>true</active>
    <description>A person who is a prospect or a client</description>
    <label>Individual</label>
</RecordType>